# diun2homer

./: Dockerfile  README.md  diun2homer.py  docker-compose.yaml  pyproject.toml
.github/workflows/: build.yaml
